--- a/src/components/ConferenceArea/index.css
+++ b/src/components/ConferenceArea/index.css
@@ -5,6 +5,9 @@
 @supports (display: grid) {
     .conference-area {
         display: grid;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 350px calc(100vw - 350px);
     }
+}
+
+.conference-area__contact-list {
 }
