Fixed input, Fixed grid on top page

--- a/src/components/Input/index.css
+++ b/src/components/Input/index.css
@@ -9,6 +9,10 @@
     background-color: #3399CC;
 }
 
+.input_theme_blue::placeholder {
+    color: white;
+}
+
 .input_theme_blue:focus {
     border: none;
     outline: none;
