Created contacts in contact list

--- a/src/components/Contact/index.css
+++ b/src/components/Contact/index.css
@@ -1,3 +1,15 @@
 .contact {
+    display: flex;
+    align-items: center;
+}
 
+.contact__avatar {
+}
+
+.contact__name {
+    margin-right: auto;
+    margin-left: 8px;
+}
+
+.contact__info {
 }
