--- a/src/components/ContactList/index.css
+++ b/src/components/ContactList/index.css
@@ -6,9 +6,14 @@
     border-right: 1px solid #3399CC;
 }
 
+.contact-list__search-field {
+    margin-bottom: 8px;
+}
+
 .contact-list__contact {
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 5px 10px;
 }
 
 .contact-list__contact_underlined {
