--- a/src/components/ConferenceArea/index.css
+++ b/src/components/ConferenceArea/index.css
@@ -1,5 +1,18 @@
 .conference-area {
+    display: grid;
+    grid-template-rows: 50px 1fr 50px;
+    grid-template-areas: "notice" "conference" "controls";
+    justify-content: center;
 }
 
-.conference-area__contact-list {
+.conference-area__call-notice {
+    grid-area: notice;
+}
+
+.conference-area__conference {
+    grid-area: conference;
+}
+
+.conference-area__controls {
+    grid-area: controls;
 }
