--- a/src/components/Icon/index.css
+++ b/src/components/Icon/index.css
@@ -11,6 +11,11 @@
     width: 25px;
 }
 
+.icon_size_40 {
+    height: 40px;
+    width: 40px;
+}
+
 .icon_rounded {
     border-width: 1px;
     border-radius: 100%;
